--- a/ImageEditor/app/build.gradle
+++ b/ImageEditor/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
 
+    compile 'com.android.support:support-v4:25.1.1'
+    compile 'com.google.android.gms:play-services-appindexing:8.4.0'
 }
