--- a/ImageEditor/app/build.gradle
+++ b/ImageEditor/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
 
     compile 'com.android.support:support-v4:25.1.1'
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
